--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -9,6 +9,6 @@ body{
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #888;
+    border: solid 1px ##1F4373;
     background-color: #dbcfa0d5;
   }
