--- a/css/site.css
+++ b/css/site.css
@@ -23,7 +23,7 @@ h1 {
 #content {
   margin: 10px;
   padding: 10px;
-  border: solid 1px #B7B1AE;
+  border: solid 1px #b8b2b5;
   background-color: #e3e5f8;
 }
 
