--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -9,11 +9,13 @@ body{
 .minor-section{
   padding: 10px;
   margin-bottom: 10;
-  background-color: #f8f0f0;
+  background-color: #b89bbe;
 }
+
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #652768;
     background-color: #4a466d;
   }
+.minor-section{}
