--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -9,13 +9,12 @@ body{
 .minor-section{
   padding: 10px;
   margin-bottom: 10;
-  background-color: #b89bbe;
+  background-color: #4c5066;
 }
 
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #652768;
-    background-color: #4a466d;
+    border: solid 1px #d8c8d8;
+    background-color: #d8c8d8;
   }
-.minor-section{}
