--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -9,7 +9,7 @@ body{
 .minor-section{
   padding: 10px;
   margin-bottom: 10;
-  background-color: #4c5066;
+  background-color: #3f4255;
 }
 
 .minor-section {
