--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -9,12 +9,12 @@ body{
 .minor-section{
   padding: 10px;
   margin-bottom: 10;
-  background-color: #3f4255;
+  background-color: #1F4373;
 }
 
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #d8c8d8;
+    border: solid 1px #1F4373;
     background-color: #d8c8d8;
   }
