--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,6 +1,12 @@
 /* Here we can set styles for this lab page that we don't want to effect others pages */
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
+
+h1,h2,h3 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: #2a2b2d;
+}
+
 body{
   max-width: 1000px
   margin: 0 auto ;
