--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -2,8 +2,8 @@
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 
-h1,h2,h3 {
-  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+body {
+  font-family: 'Times New Roman', Times, serif
 }
 
 body{
