--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -21,5 +21,5 @@ body{
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #1F4373;
-    background-color: #e8e4e8;
+    background-color: #eae5ea;
   }
