--- a/css/site.css
+++ b/css/site.css
@@ -32,5 +32,5 @@ h1 {
   padding: 10px;
   margin-bottom: 10px;
   border: solid 1px #888;
-  background-color: #c4bac5;
+  background-color: #eae5ea;
 }
