--- a/lab4/css/lab.css
+++ b/lab4/css/lab.css
@@ -5,5 +5,9 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #DDD8C4;
+    background-color: #eae5ea;
+  }
+
+  #lab4_javacode_screenshot{
+    width: 500px;
   }
