changed background color

--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -5,5 +5,12 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #DDD8C4;
+    background-color: #eae5ea;
+  }
+
+  .minor-section {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: solid 1px #888;
+    background-color: #eae5ea;
   }
