--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -8,9 +8,7 @@
     background-color: #eae5ea;
   }
 
-  .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #eae5ea;
-  }
+#lab5_jeep_screenshot{
+  width: 300px;
+
+}
