adjust code fir CSS and HTML

--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -16,7 +16,9 @@
 }
 
 #lab5_jeep_screenshot{
-  width: 300px;
-  margin-right: auto;
+  padding: 10px;
+  width: 400px;
+  /* Push image to the right */
+  margin-right:auto;
   }
   
