--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -17,8 +17,7 @@
 
 #lab5_jeep_screenshot{
   padding: 10px;
-  width: 400px;
-  /* Push image to the right */
-  margin-right:auto;
+  width: 200px;
+  margin-right: 30px;
   }
   
