--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -16,8 +16,8 @@
 }
 
 #lab5_jeep_screenshot{
-  padding: 10px;
-  width: 200px;
-  margin-right: 30px;
+  padding: 20px;
+  width: 100px;
+  margin-left: 100px;
   }
   
