changed jeep photo

--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -15,9 +15,9 @@
   width: 400px;
 }
 
-#lab5_jeep_screenshot{
+#lab5_jeep_yj{
   padding: 20px;
-  width: 100px;
+  width: 300px;
   margin-left: 100px;
   }
   
