changed photo dimensions

--- a/lab6/css/lab.css
+++ b/lab6/css/lab.css
@@ -7,3 +7,9 @@
     border: solid 1px #888;
     background-color: #eae5ea;
   }
+
+  #lab6_chevymalibu{
+    width: 800px;
+    padding-right: 50px;
+  }
+  
