--- a/lab6/css/lab.css
+++ b/lab6/css/lab.css
@@ -12,4 +12,11 @@
     width: 800px;
     padding-right: 50px;
   }
+
+  #lab6_task1_screenshot{
+    width: 325px;
+  }
   
+  #lab6_jss_html_screenshot{
+    width: 400px;
+  }
