edited code and parrllax and lab 9 files

--- a/lab7_extracredit/css/lab.css
+++ b/lab7_extracredit/css/lab.css
@@ -16,3 +16,17 @@
   body{
     padding: 10px;
   }
+
+  .parallax {
+    /* The image used */
+    background-image: url('mgsbg.jpg');
+  
+    /* Set a specific height */
+    min-height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
