--- a/lab7_extracredit/css/lab.css
+++ b/lab7_extracredit/css/lab.css
@@ -4,19 +4,30 @@
 .minor-section {
     padding: 20px;
     margin-bottom: 20px;
-    border: solid 1px #2f2f2f;
-    background-color: #eae5ea;
+    border: solid 2px #ffffff;
+    background-color: #88899029;
 }
+
+#content {
+  margin: 10px;
+  padding: 10px;
+  border: solid 1px #b8b2b5;
+  background-color: #afabab00;
+}
+
 
 #imgbigboss_gif{
   padding: 10px;
   width: 100px;
 }
 
- body{
-    padding: 10px;
-    background-image: url('img/mgsbg.jpg');
-    background-size: cover; /* Scales image to cover the entire background */
-    background-repeat: no-repeat; /* Prevents repeating */
-    background-position: center center; /* Centers the image */
-  }
+
+body {
+  padding: 1px;
+  background-color: rgba(173, 174, 177, 0.171);
+  background-image: url('imgmgsbg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
