--- a/lab7_extracredit/css/lab.css
+++ b/lab7_extracredit/css/lab.css
@@ -17,7 +17,7 @@
 body {
   padding: 1px;
   background-color: rgb(63, 69, 86);
-  background-image: url('imgmgsbg.jpg');
+  background-image: url('im/gmgsbg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
