--- a/lab9/css/lab.css
+++ b/lab9/css/lab.css
@@ -24,4 +24,9 @@ h1, h2, h3 {
   border-radius: 5px; 
 }
 
-
+#gifContainer img {
+  display: none;          
+  margin-top: 20px;
+  max-width: 100%;
+  height: auto;
+}
