created section for dino chat and centered headr

--- a/lab10/css/lab.css
+++ b/lab10/css/lab.css
@@ -11,3 +11,14 @@
 h1, h2, h3 {
     font-family: Georgia;
 }
+
+.dino-section {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: solid 1px #888;
+    background-color: #eae5ea;
+    border: 2px solid rgb(136, 129, 129);
+    border-radius: 5px;
+  }
