created CSS, JS and HTML code for JS

--- a/lab11/css/lab.css
+++ b/lab11/css/lab.css
@@ -16,3 +16,13 @@ h3{
    font-weight: bold;
    font-family: Georgia;
 }
+
+
+.text:nth-child(odd) {
+  text-align: left;
+}
+
+.text:nth-child(odd) p {
+  background-color: rgb(233, 233, 233);
+  color: black;
+}
