--- a/lab11/css/lab.css
+++ b/lab11/css/lab.css
@@ -26,3 +26,13 @@ h3{
   background-color: rgb(233, 233, 233);
   color: black;
 }
+
+.name-section{
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: solid 3px #888;
+   background-color: rgb(233, 233, 233);
+    border: 2px solid rgb(136, 129, 129);
+    border-radius: 5px;
+  }
