--- a/lab11/css/lab.css
+++ b/lab11/css/lab.css
@@ -12,27 +12,30 @@ h1, h2, h3 {
     font-family: Georgia;
 }
 
-h3{
-   font-weight: bold;
-   font-family: Georgia;
+h3 {
+  font-weight: bold;
+  font-family: Georgia;
 }
 
-
-.text:nth-child(odd) {
+.text p {
   text-align: left;
-}
-
-.text:nth-child(odd) p {
-  background-color: rgb(233, 233, 233);
+  background-color: #eae5ea;
   color: black;
+  font-size: 1.5em;       
+  font-weight: bold;      
+  margin: 10px;
+  padding: 10px;
+  border-radius: 4px;
 }
 
-.name-section{
-    font-family: 'Courier New', Courier, monospace;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 3px #888;
-   background-color: rgb(233, 233, 233);
-    border: 2px solid rgb(136, 129, 129);
-    border-radius: 5px;
-  }
+.name-section {
+  font-family: 'Courier New', Courier, monospace;
+  padding: 15px;
+  margin-top: 20px;        
+  margin-bottom: 10px;
+  border: 2px solid rgb(136, 129, 129);
+  background-color: rgb(233, 233, 233);
+  border-radius: 5px;
+  max-width: 350px;        
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
