added images and finished code

--- a/lab12/css/lab.css
+++ b/lab12/css/lab.css
@@ -26,3 +26,8 @@ h3 {
   padding: 10px;
   border-radius: 4px;
 }
+#lab12_code{
+    width: 800px;
+    padding-top:10px;
+    padding-left: 10px;
+  }
