--- a/lab14a/css/lab.css
+++ b/lab14a/css/lab.css
@@ -1,3 +1,4 @@
+
  .campell-section{
   font-family: 'Courier New', Courier, monospace;
     padding: 10px;
@@ -7,16 +8,15 @@
     background-color: #1e1d1d;
     border-radius: 5px;
 }
-  .code-section{
-    font-family: 'Courier New', Courier, monospace;
+  .snake-section{
+  font-family: 'Courier New', Courier, monospace;
     padding: 10px;
     margin-bottom: 10px;
     border: solid 5px #7CAB93;
     color: #7CAB93;
     background-color: #1e1d1d;
     border-radius: 5px;
-  }
-
+ }
   .text-section{
     margin-right: 1px;
     font-family: 'Courier New', Courier, monospace;
