--- a/lab14/css/lab.css
+++ b/lab14/css/lab.css
@@ -32,3 +32,14 @@ h3 {
 .button:hover {
     background-color: #218838;
 }
+#lab14_issue1{
+    width: 800px;
+    padding-top:10px;
+    padding-left: 10px;
+  }
+#lab14_webpage{
+    width: 800px;
+    padding-top:10px;
+    padding-left: 10px;
+  }
+  
