--- a/css/site.css
+++ b/css/site.css
@@ -24,7 +24,7 @@ h1 {
   margin: 10px;
   padding: 10px;
   border: solid 1px #b8b2b5;
-  background-color: #c4bac5;
+  background-color: #a9a7ac;
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
