--- a/css/site.css
+++ b/css/site.css
@@ -24,7 +24,7 @@ h1 {
   margin: 10px;
   padding: 10px;
   border: solid 1px #b8b2b5;
-  background-color: #a9a7ac;
+  background-color: #e7e7eac9;
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
@@ -32,5 +32,5 @@ h1 {
   padding: 10px;
   margin-bottom: 10px;
   border: solid 1px #888;
-  background-color: #eae5ea;
+  background-color: #e7e7eac9;
 }
