--- a/lab15/css/lab.css
+++ b/lab15/css/lab.css
@@ -3,7 +3,7 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #eae5ea;
+    background-color: #d5d5d8;
     border: 2px solid rgb(136, 129, 129);
     border-radius: 5px;
   }
