added js screenshot

--- a/lab15/css/lab.css
+++ b/lab15/css/lab.css
@@ -16,3 +16,9 @@ h3 {
   font-weight: bold;
   font-family: Georgia;
 }
+
+#lab15jscode{
+    width: 800px;
+    padding-top:10px;
+    padding-left: 10px;
+  }
